Break the bottle neck for large execution time by 20-30x